--- a/public/bot.html
+++ b/public/bot.html
@@ -83,11 +83,24 @@
       
       socket.on('chat-message', ({ from, text }) => {
         console.log(`[${botName}] Received message from ${from}: "${text}"`);
-        // Generate AI response after a small delay (looks more natural)
-        setTimeout(() => {
-          const response = generateBotResponse(text);
-          console.log(`[${botName}] Sending response: "${response}"`);
-          socket.emit('chat-message', { to: from, text: response });
+        // Request AI response from server after a small delay (looks more natural)
+        setTimeout(async () => {
+          try {
+            const res = await fetch('/api/ai-response', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ message: text, botId, socketId: socket.id })
+            });
+            const data = await res.json();
+            if (data.response) {
+              console.log(`[${botName}] Sending response: "${data.response}"`);
+              socket.emit('chat-message', { to: from, text: data.response });
+            } else {
+              console.log(`[${botName}] No response generated`);
+            }
+          } catch (err) {
+            console.error(`[${botName}] Error getting AI response:`, err);
+          }
         }, 500 + Math.random() * 1500);
       });
     }
