--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>Palpair - Random Video Chat</h1>
+      <h1>Palpair</h1>
+      <p class="subtitle">Meet new people instantly • Video chat worldwide</p>
+      <div id="userCounter" class="user-counter-wrap">
+        <span class="counter-chip"><span id="userCount">0</span> people online</span>
+        <span class="counter-chip"><span id="botCount">0</span> bots online</span>
+      </div>
+      <p class="safety-note">Palpair - Random Video Chat allows users to report child safety concerns in-app. To learn more about reporting requirements, visit the <a href="/help-center.html" target="_blank" rel="noopener">Help center</a>.</p>
       
       <!-- Profile Form -->
       <div id="profileForm" class="profile-form">
@@ -458,6 +464,7 @@
       <div class="controls">
         <button id="toggleBtn">Start</button>
         <button id="nextBtn" disabled>Find Next</button>
+        <button id="reportBtn">Report Concern</button>
       </div>
 
       <p id="status">Idle</p>
