--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
       <h1>Palpair</h1>
       <p class="subtitle">Meet new people instantly • Video chat worldwide</p>
       <div id="userCounter" class="user-counter-wrap">
-        <span class="counter-chip"><span id="userCount">0</span> people online</span>
-        <span class="counter-chip"><span id="botCount">0</span> bots online</span>
+        <span class="counter-chip"><span id="userCount">0</span>&nbsp;people online now</span>
       </div>
       <p class="safety-note">Palpair - Random Video Chat allows users to report child safety concerns in-app. To learn more about reporting requirements, visit the <a href="/help-center.html" target="_blank" rel="noopener">Help center</a>.</p>
       
