favicon: Add SVG icon and link in HTML

--- a/public/bot.html
+++ b/public/bot.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Bot Video Stream</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 </head>
 <body>
   <video id="botVideo" autoplay loop muted playsinline style="display:none"></video>
