--- a/public/help-center.html
+++ b/public/help-center.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Palpair Help Center - Safety Reporting</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <style>
       body {
         margin: 0;
